objects/ASI_CRM_Price_Set_Generation_Log_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <formula>ASI_CRM_Pre_Approval_Form__r.ASI_HK_CRM_PAF_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pre_Approval_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Approval Form</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipName>Price_Set_Generation_Log_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_Set_Generation_Log__c</fullName>
        <label>Price Set Generation Log</label>
        <referenceTo>ASI_CRM_Price_Set_Generation_Log__c</referenceTo>
        <relationshipName>Price_Set_Generation_Log_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Price Set Submission Detail</label>
    <nameField>
        <displayFormat>LOG-P{0000000}</displayFormat>
        <label>Price Set Generation Log Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Set Submission Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_Price_Set_Item</fullName>
        <active>true</active>
        <label>HK Price Set Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>